<resources>
    <string name="app_name">Tribe Explorer</string>
    <string name="tribe">Tribe</string>
    <string name="explorer" translatable="false">explorer</string>
    <string name="select_language">Select Language</string>
    <string name="spinner_title">English</string>
    <string name="welcome_text">Hey, Welcome back!</string>
    <string name="faster_login">For faster login, use your social account.</string>
    <string name="facebook_app_id" translatable="false">2052103524815627</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2052103524815627</string>
    <string name="CONSUMER_KEY" translatable="false">zzTxGTg5d6GUnPQ2HibAivqRc</string>
    <string name="CONSUMER_SECRET" translatable="false">Q7YVummY6f36As3Pw1CeiKNYg6cMkd0EXCuh0BARkYbwoU9CO8</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_twitter">Login with Twitter</string>
    <string name="or">Or</string>
    <string name="username_email">Username/email</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="guest">Guest User</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="email.com" translatable="false">xyz@gmail.com</string>
    <string name="atleast_6_digits_password">Atleast 6-Digits Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="business_owner">Are you a business owner?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="gender_optional">Gender (Optional)</string>
    <string name="birth_date_optional">Birth Date (Optional)</string>
    <string name="submit">Submit</string>
    <string name="already_account">Already have an account</string>
    <string name="terms_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="not_robot">I am not a robot</string>
    <string name="enter_captcha">Enter captcha</string>
    <string name="reload">Reload</string>
    <string name="add_photo">Add Photo</string>
    <string name="please_fill_data">Please fill all the data.</string>
    <string name="invalid_credentials">Invalid login credentials</string>
    <string name="no_response">Something went wrong! Please try again.</string>
    <string name="fill_required_fields">Please fill all the required fields.</string>
    <string name="password_unmatch">Password didn\'t match</string>
    <string name="gender_male_female">Please enter gender as male or female or other</string>
    <string name="wrong_captcha">Wrong captcha entered!</string>
    <string name="pick_image_intent_text">Select Image</string>
    <string name="failed_to_register">Failed to register your account. Please try again.</string>
    <string name="registered_successfully">Registered successfully. Please login to continue.</string>
    <string name="grant_permissions">Please grant all the permissions</string>
    <string name="select_pic">Please select your profile pic</string>
    <string name="password_length">Password must contains at least 6 letters.</string>
    <string name="menu_home">Home</string>
    <string name="menu_favourites">Favorites</string>
    <string name="menu_search">Search</string>
    <string name="menu_coupons">Coupons</string>
    <string name="menu_me">Me</string>
    <string name="account">Account</string>
    <string name="your_listing">Your Listing</string>
    <string name="add_listing">Add Listing</string>
    <string name="prices_and_plans">Prices and Plans</string>
    <string name="how_it_works">How It Works</string>
    <string name="blog">Blog</string>
    <string name="log_out">Log Out</string>
    <string name="change_password">Change Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="business_name">Business Name</string>
    <string name="your_business_name">Your Business Name</string>
    <string name="location">Location</string>
    <string name="e_g_london">e.g. London</string>
    <string name="contact_email_url">Contact Email/URL</string>
    <string name="email_or_website">Enter an email address or website URL</string>
    <string name="business_region">Business Region</string>
    <string name="select_region">Select Region</string>
    <string name="business_category">Business Category (One or more)</string>
    <string name="select_categories">Select Categories</string>
    <string name="business_labels_optional">Business Labels (Optional)</string>
    <string name="comma_separated_labels">Comma separated labels</string>
    <string name="website_optional">Website (Optional)</string>
    <string name="www_google_com">www.google.com</string>
    <string name="phone_number_optional">Phone Number (Optional)</string>
    <string name="phone_number">Phone Number</string>
    <string name="video_optional">Video (Optional)</string>
    <string name="url_to_video">URL to video</string>
    <string name="description">Description</string>
    <string name="cover_image_optional">Cover Image (Optional)</string>
    <string name="choose_image">Choose Image..</string>
    <string name="no_image">No Image</string>
    <string name="gallery_image_optional">Gallery Image (Optional)</string>
    <string name="hours_of_operation_optional">Hours of Operation</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus">-</string>
    <string name="add_title_of_language_section">Add title of language section</string>
    <string name="pm" translatable="false">-- pm</string>
    <string name="close">Close:</string>
    <string name="am" translatable="false">-- am</string>
    <string name="open">Open:</string>
    <string name="days">Days</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="opening_time">Opening Time</string>
    <string name="closing_time">Closing Time</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="line">--</string>
    <string name="categories">Categories</string>
    <string name="add_language">Add Language</string>
    <string name="owner">Owner</string>
    <string name="delete">Delete</string>
    <string name="no_listing">There is no listing.</string>
    <string name="fav_added"> has been added to your favorite list</string>
    <string name="fav_removed"> has been removed from your favorite list</string>
    <string name="error_fav_removing">Error while removing the listing from your favourite</string>
    <string name="failed_to_load_data">Failed to load data!</string>
    <string name="no_data">No data found!</string>
    <string name="logged_out">You have been logged out of the app.</string>
    <string name="submit_email_address">Submit your registered email password and get the instructions to reset your password.</string>
    <string name="enter_registered_email">Please enter the registered email address!</string>
    <string name="password_sent">Password has been sent to your email address.</string>
    <string name="invalid_email_address">Please enter the valid email address.</string>
    <string name="invalid_user">User doesn\'t exist anymore.</string>
    <string name="failed_profile_update">Failed to update profile. Please try again</string>
    <string name="profile_updated">Your profile has been updated successfully</string>
    <string name="speed">Speed</string>
    <string name="quality">Quality</string>
    <string name="price">Price</string>
    <string name="reviews">Reviews</string>
    <string name="favorites">Favorites</string>
    <string name="claim_listing">Claim this listing</string>
    <string name="add_photos">Add Photos</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="social_profiles">Social Profiles</string>
    <string name="google_maps_key" translatable="false">AIzaSyDDYmhfyC7KnZgJDlQldnDkSt317EAU9_s</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="no_photos">There are no photos for this listing.</string>
    <string name="to">to</string>
    <string name="looking_for">What are you looking for?</string>
    <string name="radius">Radius:</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="retry">Retry</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="confirm_edit_profile">Are you sure you want to edit your profile ?</string>
    <string name="write_review">Write a review</string>
    <string name="we_speak">We speak</string>
    <string name="contact_admin">Contact</string>
    <string name="featured">Featured</string>
    <string name="language">Language</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="try_again">Please try again after sometime.</string>
    <string name="search_location">Search Location</string>
    <string name="pick_location">Pick Location</string>
    <string name="location_empty">Unable to get your current location</string>
    <string name="select_location">Please select your location</string>
    <string name="timezone">Timezone</string>
    <string name="company_logo">Company logo(Optional)</string>
    <string name="select_timezone">Select timezone</string>
    <string name="error_processing_request">Error processing your request</string>
    <string name="hour_format">Hours should be in 12-hour format</string>
    <string name="minutes_range">Minutes should be in range of 0–59</string>
    <string name="AM" translatable="false">AM</string>
    <string name="PM" translatable="false">PM</string>
    <string name="login_to_check_fav">Please login to check your favorite listings</string>
    <string name="login_to_fav">Please login to favorite any listing.</string>
    <string name="please_grant_permissions">Please grant all the permissions.</string>
    <string name="email_already_registered">Email id is already registered with us</string>
    <string name="toggle_filters">Toggle Filters</string>
    <string name="sort_by">Sort by</string>
    <string name="filter_results">Filter results</string>
    <string name="login_to_create_account">Please login to check your account</string>
    <string name="login_to_add_business">Please login to add your business</string>
    <string name="login_to_check_listings">Please login to check your businesses.</string>
    <string name="comment">Comment</string>
    <string name="login_to_rate">Please login to rate the listing</string>
    <string name="rating_can_not_be_empty">Rating fields can not be empty</string>
    <string name="review_added">Your review has been added successfully</string>
    <string name="add_review_failed">Unable to submit your review. Please try again.</string>
    <string name="add_comment">Please add the comment</string>
    <string name="no_rating">THere is no rating for this listing</string>
    <string name="already_claimed">You have already claimed this listing</string>
    <string name="successfully_claimed">You have successfully claimed this listing</string>
    <string name="failed_to_claim">Failed to claim this listing. Please try again.</string>
</resources>