<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#fff">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@mipmap/hdr"
            android:foreground="@drawable/ripple"
            android:layout_gravity="start"
            android:contentDescription="@null"/>

        <include layout="@layout/header"/>

    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/email"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/email.com"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/business_name"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp" />

            <EditText
                android:id="@+id/editBusinessName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_business_name"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/location"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp" />

            <EditText
                android:id="@+id/editLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:hint="@string/e_g_london"
                android:longClickable="false"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/contact_email_url"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp" />

            <EditText
                android:id="@+id/editContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_or_website"
                android:inputType="text"
                android:maxLines="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/business_region"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp" />

            <Spinner
                android:id="@+id/spinnerRegion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/select_region"
                android:paddingTop="@dimen/_5sdp"
                android:background="@android:color/transparent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="#666666"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/business_category"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp" />

            <EditText
                android:id="@+id/editCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_categories"
                android:focusableInTouchMode="false"
                android:longClickable="false"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/business_labels_optional"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp" />

            <EditText
                android:id="@+id/editBusinessLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comma_separated_labels"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/website_optional"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp" />

            <EditText
                android:id="@+id/editWeb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/www_google_com"
                android:inputType="textUri" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/phone_number_optional"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/video_optional"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp" />

            <EditText
                android:id="@+id/editVideoURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/url_to_video"
                android:inputType="textUri" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp" />

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="start|top"
                android:gravity="start|top"
                android:padding="@dimen/_5sdp"
                android:background="@drawable/round_shape_edittext"
                android:inputType="textMultiLine" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/company_logo"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp" />

            <include layout="@layout/content_company_logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/cover_image_optional"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal"
                tools:ignore="RelativeOverlap">

                <TextView
                    android:id="@+id/tvCover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_shape_edittext"
                    android:padding="@dimen/_5sdp"
                    android:foreground="@drawable/ripple"
                    android:text="@string/choose_image" />

                <RelativeLayout
                    android:id="@+id/rlCover"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/imgCover"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/menu_home"
                        android:scaleType="fitXY" />

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@+id/imgCover"
                        app:cardUseCompatPadding="true"
                        android:layout_alignRight="@+id/imgCover">

                        <ImageView
                            android:id="@+id/imgDelete"
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:foreground="@drawable/ripple"
                            android:layout_alignParentTop="true"
                            android:contentDescription="@string/cancel"
                            android:src="@mipmap/ic_remove" />

                    </android.support.v7.widget.CardView>

                </RelativeLayout>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/gallery_image_optional"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tvGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/round_shape_edittext"
                android:padding="@dimen/_5sdp"
                android:foreground="@drawable/ripple"
                android:text="@string/choose_image" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerGallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/timezone"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp" />

            <Spinner
                android:id="@+id/spinnerTimezone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/select_timezone"
                android:paddingTop="@dimen/_5sdp"
                android:background="@android:color/transparent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="#666666"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_toLeftOf="@+id/tvAddHours"
                    android:layout_toStartOf="@+id/tvAddHours"
                    android:text="@string/hours_of_operation_optional"
                    android:textAppearance="@style/TextAppearance.FontPath"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/tvAddHours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foreground="?selectableItemBackground"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/plus"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_18ssp" />

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerHours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_toLeftOf="@+id/tvAddLanguage"
                    android:layout_toStartOf="@+id/tvAddLanguage"
                    android:text="@string/add_title_of_language_section"
                    android:textAppearance="@style/TextAppearance.FontPath"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/tvAddLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:foreground="?selectableItemBackground"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/plus"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_18ssp" />

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="#2B52A7"
                android:padding="@dimen/_5sdp"
                android:text="@string/done"
                android:foreground="@drawable/ripple"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>