<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/menu_home"
            android:textSize="@dimen/_12ssp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:drawableTop="@mipmap/home_green"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/menu_favourites"
            android:textSize="@dimen/_12ssp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:drawableTop="@mipmap/favourite_blue"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/menu_search"
            android:textSize="@dimen/_12ssp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:drawableTop="@mipmap/search_blue"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/menu_coupons"
            android:textSize="@dimen/_12ssp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:drawableTop="@mipmap/coupon_blue"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/menu_me"
            android:textSize="@dimen/_12ssp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:drawableTop="@mipmap/user_blue"/>

    </LinearLayout>

</android.support.v7.widget.CardView>